--- a/package.json
+++ b/package.json
@@ -10,18 +10,24 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@reduxjs/toolkit": "^2.2.3",
+    "@tiptap/core": "^2.27.1",
     "@tiptap/extension-link": "^2.5.5",
-    "@tiptap/extension-placeholder": "^2.5.5",
-    "@tiptap/extension-underline": "^2.5.5",
-    "@tiptap/react": "^2.5.5",
-    "@tiptap/starter-kit": "^2.5.5",
+    "@tiptap/extension-placeholder": "^2.27.1",
+    "@tiptap/extension-task-item": "^2.27.1",
+    "@tiptap/extension-task-list": "^2.27.1",
+    "@tiptap/extension-underline": "^2.27.1",
+    "@tiptap/react": "^2.27.1",
+    "@tiptap/starter-kit": "^2.27.1",
     "clsx": "^2.1.0",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^10.1.0",
     "react-redux": "^9.1.2",
+    "react-resizable-panels": "^3.0.6",
     "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
