--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^10.1.0",
+    "react-resizable-panels": "^3.0.6",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "firebase": "10.14.1",
