--- a/package.json
+++ b/package.json
@@ -23,14 +23,15 @@
     "@tiptap/react": "^2.27.1",
     "@tiptap/starter-kit": "^2.27.1",
     "clsx": "^2.1.0",
+    "firebase": "10.14.1",
+    "firebase-admin": "12.6.0",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^10.1.0",
     "react-redux": "^9.1.2",
+    "react-resizable-panels": "^3.0.6",
     "react-router-dom": "^6.28.0",
-    "firebase": "10.14.1",
-    "firebase-admin": "12.6.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
