--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@dnd-kit/sortable": "^8.0.0",
     "@reduxjs/toolkit": "^2.2.3",
     "@tiptap/core": "^2.4.0",
+    "@tiptap/extension-color": "^2.27.1",
+    "@tiptap/extension-highlight": "^2.27.1",
     "@tiptap/extension-link": "^2.4.0",
     "@tiptap/extension-placeholder": "^2.4.0",
     "@tiptap/extension-task-item": "^2.4.0",
